added sidecar to manage server files

--- a/infrastructure/terraform.tfvars.example
+++ b/infrastructure/terraform.tfvars.example
@@ -16,3 +16,6 @@ github_repo  = "vintage-story-server"
 # fargate_cpu       = 512
 # fargate_memory_mb = 1024
 # vs_version        = "1.21.6"
+
+# Optional: disable FileBrowser (web file manager at :8080)
+# enable_filebrowser = false
