--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,17 +38,14 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/vintage-story-server:$IMAGE_TAG .
           docker push $ECR_REGISTRY/vintage-story-server:$IMAGE_TAG
+          docker tag $ECR_REGISTRY/vintage-story-server:$IMAGE_TAG $ECR_REGISTRY/vintage-story-server:latest
+          docker push $ECR_REGISTRY/vintage-story-server:latest
           echo "ecr_image=$ECR_REGISTRY/vintage-story-server:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-  deploy-ecs:
-    name: Deploy to ECS Fargate
+  deploy-ec2:
+    name: Deploy to EC2
     runs-on: ubuntu-latest
     needs: build-push
-    env:
-      ECS_CLUSTER_NAME: ${{ secrets.ECS_CLUSTER_NAME }}
-      ECS_SERVICE_NAME: ${{ secrets.ECS_SERVICE_NAME }}
-      ECS_TASK_DEFINITION: ${{ secrets.ECS_TASK_DEFINITION }}
-      ECR_IMAGE: ${{ needs.build-push.outputs.ecr_image }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -56,27 +53,41 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Get current ECS task definition
-        id: task-def
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Deploy via SSM (pull and restart container)
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          EC2_INSTANCE_ID: ${{ secrets.EC2_INSTANCE_ID }}
         run: |
-          TASK_DEF=$(aws ecs describe-task-definition \
-            --task-definition ${{ env.ECS_TASK_DEFINITION }} \
-            --query 'taskDefinition' \
-            --output json)
-          echo "$TASK_DEF" | jq 'del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' > task-definition.json
+          IMAGE="$ECR_REGISTRY/vintage-story-server:latest"
+          PARAMS=$(jq -cn \
+            --arg img "$IMAGE" \
+            --arg reg "$ECR_REGISTRY" \
+            '{commands: [
+              "REGION=$(curl -s http://169.254.169.254/latest/meta-data/placement/region)",
+              "aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin " + $reg,
+              "docker pull " + $img,
+              "docker stop vintagestory_server 2>/dev/null || true",
+              "docker rm vintagestory_server 2>/dev/null || true",
+              "docker run -d --name vintagestory_server --restart unless-stopped -p 42420:42420 -p 42420:42420/udp -v /var/vintagestory/data:/var/vintagestory/data -e VS_VERSION=1.21.6 " + $img
+            ]}')
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids "$EC2_INSTANCE_ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters "$PARAMS" \
+            --output text \
+            --query 'Command.CommandId')
 
-      - name: Render task definition with new image
-        id: render
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          container-name: vintagestory
-          image: ${{ env.ECR_IMAGE }}
+          echo "Waiting for command $COMMAND_ID to complete..."
+          aws ssm wait command-executed --command-id "$COMMAND_ID" --instance-id "$EC2_INSTANCE_ID"
 
-      - name: Deploy to ECS
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
-        with:
-          task-definition: ${{ steps.render.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE_NAME }}
-          cluster: ${{ env.ECS_CLUSTER_NAME }}
-          wait-for-service-stability: true
+          STATUS=$(aws ssm get-command-invocation --command-id "$COMMAND_ID" --instance-id "$EC2_INSTANCE_ID" --query 'Status' --output text)
+          if [ "$STATUS" != "Success" ]; then
+            echo "Deploy failed. Output:"
+            aws ssm get-command-invocation --command-id "$COMMAND_ID" --instance-id "$EC2_INSTANCE_ID"
+            exit 1
+          fi
+          echo "Deploy complete."
